--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <div class="container">
   </div>
 
-  <!-- mannually imported -->
+  <!-- manually imported -->
   <script type="text/javascript" src="app.js" charset="utf-8"></script>
 
 </body>
